# Symmless

./: .gitignore  CMakeLists.txt  README.md  hello.cpp
.github/workflows/: cmake.yml
core/: CMakeLists.txt
core/includes/Common/: Symmless.hpp
core/includes/Matrix/: Matrix.hpp
core/includes/Vector/: Vector-Impl.hpp  Vector.hpp  Vector3-Impl.hpp  Vector3.hpp
core/tests/unitTests/: CMakeLists.txt  test_Vector3.cpp
cpu/includes/Vector/: Vector-Impl.hpp  Vector.hpp  Vector3-Impl.hpp  Vector3.hpp
cpu/tests/unitTests/: CMakeLists.txt  test_Vector3.cpp  unitTest.hpp
gpu/: CMakeLists.txt
gpu/includes/Vector/: Vector3.hpp
tests/unitTests/: test_Matrix.cpp  test_Vector3.cpp  unitTests.cpp
